src/objects/EmploymentWebsiteDemo__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Budget__c</fullName>
        <label>Maximum Budget</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_per_Post__c</fullName>
        <label>Price per Post</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Address__c</fullName>
        <label>Web Address</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>EmploymentWebsiteDemo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EmploymentWebsite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmploymentWebsites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>